k8s/base/unleashservice/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-unleashservice
  labels:
    name: hhb-unleashservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-unleashservice
  template:
    metadata:
      labels:
        name: hhb-unleashservice
    spec:
      containers:
        - name: hhb-unleashservice
          image: unleashservice
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
