k8s/base/unleashservice/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-unleashservice
  labels:
    name: hhb-unleashservice
spec:
  type: ClusterIP
  selector:
    name: hhb-unleashservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
