k8s/base/unleashservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-unleashservice-ingress
  labels:
    name: hhb-unleashservice-ingress
spec:
  rules:
    - host: huishoudboekje.example.com
      http:
        paths:
          - path: /api/unleash
            pathType: Prefix
            backend:
              service:
                name: hhb-unleashservice
                port:
                  number: 80
